<resources>
    <string name="app_name">잘했다리</string>
    <!-- activity login -->
    <string name="activity_login_info">우리는 각자의 다이어리에 \n들어가야해서 로그인이 필수야!</string>
    <string name="activity_login_info2">만약 아직 가입하지 않았다면 \n회원가입을 부탁할게!</string>
    <string name="activity_login_btnLogin">로그인</string>
    <string name="activity_login_btnSignup">회원가입</string>

    <!-- activity signup  -->
    <string name="activity_signup_info">가입을 해야 \n 우리 만의 다이어리를 만들 수 있어!</string>
    <string name="activity_signup_user_name">사용자 이름</string>
    <string name="activity_signup_user_ID">아이디</string>
    <string name="activity_signup_user_password">비밀번호</string>
    <string name="activity_signup_btnSignup">회원가입</string>
    <string name="activity_signup_info2">이미 계정이 있다면</string>
    <string name="activity_signup_btnLogin">로그인</string>
    <string name="activity_signup_etInputType">0123456789_qwertyuiopasdfghjklzxcvbnm!QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <!-- activity emotion statistics -->
    <string name="activity_emotion_statistics_tvMonth">N월</string>
    <string name="activity_emotion_statistics_tvFirst">1위</string>
    <string name="activity_emotion_statistics_tvSecond">2위</string>
    <string name="activity_emotion_statistics_tvThird">3위</string>
    <string name="activity_emotion_statistics_rvTextView">N개</string>
    <string name="activity_emotion_statistics_btnNext">다음</string>
    <string name="activity_emotion_statistics_btnPrevious">이전</string>
    <!-- activity badge -->
    <string name="activity_badge_info">노려라! \n 칭찬 마스터!</string>
    <string name="activity_badge_info2">칭찬 마스터가 되면 하늘이 맑게 갤 거예요.</string>
    <string name="activity_badge_3days">3일 - 시작을 준비하는 시간.</string>
    <string name="activity_badge_7days">7일 - 일주일 간의 시작.</string>
    <string name="activity_badge_21days">21일 - 시작을 준비하는 시간.</string>
    <string name="activity_badge_66days">66일 - 시작을 준비하는 시간.</string>
    <string name="activity_badge_100days">100일 - 습관을 확인하는 시간.</string>
    <string name="activity_badge_3daysTitle">작심삼일</string>
    <string name="activity_badge_7daysTitle">칭찬 스타터</string>
    <string name="activity_badge_21daysTitle">칭찬 주니어</string>
    <string name="activity_badge_66daysTitle">칭찬 시니어</string>
    <string name="activity_badge_100daysTitle">칭찬 마스터</string>
    <!-- navi menu item -->
    <string name="navi_menu_item_calendar">캘린더</string>
    <string name="navi_menu_item_emotion_statistics">월별 감정 통계</string>
    <string name="navi_menu_item_badge">배지 달성</string>
    <!-- activity diary -->
    <string name="activity_diary_tvDate">년 월 일</string>
    <string name="activity_diary_htWeather">날씨</string>
    <string name="activity_diary_htTitle">제목</string>
    <string name="activity_diary_htContent">내용</string>
    <string name="activity_diary_tvInfo">오늘의 자신을 칭찬해주세요!</string>
    <string name="activity_diary_btnSave">저장</string>
    <!-- activity calendar -->
    <string name="activity_calendar_tv">오늘도 할 수 있어!</string>
</resources>