<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/activity_login_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/ic_main_character" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/activity_login_info" />
    </LinearLayout>

    <View
        android:id="@+id/activity_signup_line"
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="16dp">

        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/activity_signup_user_ID" />

        <EditText
            android:id="@+id/activity_login_edtID"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_activity_signup_edittext"
            android:digits="@string/activity_signup_etInputType"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="13dp">

        <TextView
            android:layout_width="60sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/activity_signup_user_password" />

        <EditText
            android:id="@+id/activity_login_edtPW"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_activity_signup_edittext"
            android:digits="@string/activity_signup_etInputType"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <Button
            android:id="@+id/activity_login_btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/activity_signup_btnSignup"
            android:text="@string/activity_login_btnLogin" />
    </LinearLayout>

    <View
        android:layout_width="320dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/activity_login_info2" />

    <Button
        android:id="@+id/activity_login_btnReg"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/white"
        android:text="@string/activity_login_btnSignup"
        android:textColor="@color/activity_signup_btnLoginColor"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>