<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/date"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_diary_tvTextColor">

    <ImageView
        android:id="@+id/activity_diary_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/activity_diary_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_diary_image">

        <TextView
            android:id="@+id/activity_diary_tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:text="@string/activity_diary_tvDate"
            android:textColor="@color/activity_diary_tvDateColor" />

        <EditText
            android:id="@+id/activity_diary_edtWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/activity_diary_htWeather"
            android:inputType="text"
            android:textColorHint="@color/activity_diary_tvDateColor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_diary_llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_diary_ll">

        <EditText
            android:id="@+id/activity_diary_edtTitle"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_activity_diary_edittext"
            android:hint="@string/activity_diary_htTitle"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <EditText
            android:id="@+id/activity_diary_edtText"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_activity_diary_edittext_content"
            android:hint="@string/activity_diary_htContent"
            android:inputType="textMultiLine"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_diary_llContent2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/activity_diary_llContent">

        <TextView
            android:id="@+id/activity_diary_TextView"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_activity_diary_textview"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/activity_diary_tvInfo"
            android:textColor="@color/activity_diary_tvTextColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activity_diary_edtText2"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_activity_diary_edittext_content"
            android:hint="@string/activity_diary_htContent"
            android:inputType="textMultiLine"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <Button
            android:id="@+id/activity_diary_btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/activity_diary_btnSave" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>