<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_emotion_statistics_DL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmotionStatistics">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_emotion_statistics_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- 월 표시 -->
        <TextView
            android:id="@+id/activity_emotion_statistics_tvMonth"
            android:layout_width="152dp"
            android:layout_height="67dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_activity_emotion_statistics_textview"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/activity_emotion_statistics_tvMonth"
            android:textColor="@color/activity_emotion_statistics_tvTextColor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_emotion_statistics_tb" />

        <!-- Top 3 표시 -->
        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:columnCount="3"
            android:rowCount="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_emotion_statistics_tvMonth">

            <!-- 1위 -->
            <ImageView
                android:id="@+id/activity_emotion_statistics_ivCrown"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center"
                app:srcCompat="@drawable/baseline_star_24" />

            <ImageView
                android:id="@+id/activity_emotion_statistics_ivFirst"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_gravity="center"
                app:srcCompat="@drawable/bg_activity_emotion_statistics_imageview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="center"
                android:text="@string/activity_emotion_statistics_tvFirst" />

            <!-- 2위 -->
            <ImageView
                android:id="@+id/activity_emotion_statistics_ivSecond"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_gravity="center"
                app:srcCompat="@drawable/bg_activity_emotion_statistics_imageview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:layout_gravity="center"
                android:text="@string/activity_emotion_statistics_tvSecond" />

            <!-- 3위 -->
            <ImageView
                android:id="@+id/activity_emotion_statistics_ivThird"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_row="3"
                android:layout_column="2"
                android:layout_gravity="center"
                app:srcCompat="@drawable/bg_activity_emotion_statistics_imageview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="2"
                android:layout_gravity="center"
                android:text="@string/activity_emotion_statistics_tvThird" />
        </GridLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_emotion_statistics_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/activity_emotion_statistics_NV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navi_header"
        app:menu="@menu/navi_menu" />
</androidx.drawerlayout.widget.DrawerLayout>